# coggie-bot

./: Cargo.toml  LICENSE  README.md  bookmark-bot-update.timer  deezer-api.patch  flake.nix  lib.nix  maintainers.nix  module.nix  pipe_demix  settings.nix  tickets.md
.github/workflows/: cachix.yml  main.yml  migrate.yml  nix-build.yml  release.yml  rust-build.yml  rust-clippy.yml  rust.yml  update-flake-lock.yml  update.yml
coggiebot/src/: main.rs
coggiebot/systemd/: bookmark-bot-update.service  bookmark-botd.service
crates/balloon/: Cargo.toml
crates/balloon/src/: main.rs
crates/coggiebot/: Cargo.toml
crates/coggiebot/src/: main.rs
crates/coggiebot/src/controllers/: basic.rs  bookmark.rs  features.rs  help.rs  llm.rs  mod.rs  prerelease.rs  system-prompt.txt  vc_notify.rs
crates/coggiebot/src/controllers/mockingbird/: README.md  channel.rs  controller.rs  mod.rs  new_deemix.rs
crates/coggiebot/src/controllers/mockingbird/extractor/: deemix.json  deemix.rs  mod.rs  mp3.rs  ytdl.rs
crates/coggiebot/src/controllers/shrike/: README.md  mod.rs
crates/cutils/: Cargo.toml  build.rs
crates/cutils/src/: fion.c  lib.rs
crates/mockingbird/: Cargo.toml
crates/mockingbird/src/: check.rs  compat.rs  controller.rs  crossfade.rs  ctrlerror.rs  deemix.rs  dev.rs  eventhandler.rs  events.rs  fan.rs  fion.c  httpget.rs  lib.rs  models.rs  mp3.rs  on_message.rs  player.rs  radio.rs  routines.rs  skip.rs  testsuite.rs  usersettoken.rs
docs/: cogs.md  configuration.md  hacking.md  install.md  introduction.md  mockingbird.md  operations.md
iac/: default.nix  lib.nix  linux-ci.nix  maintainers.nix
iac/coggiebot/: default.nix  docker.nix  meta.nix  mockingbird.nix
iac/linux/: default.nix  helpers.nix  systemd.nix
iac/linux/auto-update/: default.nix  systemd.nix
iac/vanilla-linux/: default.nix  systemd.nix
sandbox/: builder.nix  default.nix  eval.nix  flake.nix  lib.rs  nasm.nix  run-sandboxed.nix
sandbox/builders/: builder.nix
sandbox/disasm/: mono.nix
sandbox/profile/: flamegraph.nix
sbin/: coggiebot-agent.sh  install.sh  starter-builder.sh  update-builder.sh
sbin/cachectl/: default.nix
sbin/cleanup-dl/: Makefile.PL  cleanup-downloads.pl  default.nix
sbin/deemix-stream/: deemix-metadata  deemix-min  deemix-stream  default.nix  setup.py  spotify-recommend
sbin/deemix-stream/deemix_stream/: __init__.py  patchssl.py
sbin/spotrec/: recommend.py
sbin/stream-deemix/: deemix-stream  default.nix  setup.py
sbin/stream-demix/: default.nix  setup.py
src/: config.rs  main.rs  mockingbird.rs  pkglib.rs  tips.json
src/controllers/: basic.rs  bookmark.rs  features.rs  help.rs  mockingbird.rs  mod.rs
src/controllers/mockingbird/: controller.rs  demix.rs  mockingbird.rs  mod.rs
src/controllers/mockingbird/extractor/: deemix.json  deemix.rs  mod.rs
systemd/: coggiebotd-update.service  coggiebotd-update.timer  coggiebotd.service
