[package]
name = "coggiebot"
version = "1.3.7"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features=false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
structopt = { version = "0.3", default-features = false }
crossbeam-channel = { version = "0.5.6" }
serde_json = { version = "1.0.93", features = ["alloc"] } 

[package.metadata.nix]
app = true
build = true
library = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]
