[package]
name = "coggiebot"
version = "1.3.8"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features=false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "voice", "cache"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
structopt = { version = "0.3", default-features = false }
songbird = { version = "0.3.0", optional=true, features=["builtin-queue"] }

[features]
default = ["basic-cmds", "mockingbird", "bookmark"]
basic-cmds = []
mockingbird = ["dep:songbird"]
bookmark = []

[package.metadata.nix]
app = true
build = true
library = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]
