[package]
name = "coggiebot"
version = "1.4.4"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features=false, features = ["client", "gateway", "rustls_backend", "model", "framework", "standard_framework", "voice", "cache"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
structopt = { version = "0.3", default-features = false }
derive_builder = "0.12"
thiserror = "1.0"
anyhow = "1.0"
toml = "0.7"
serde = "1.0"
serde_derive = "*"
serde_json = "*"
songbird = { version = "0.3.0", optional=true, features=["builtin-queue"] }


[features]
default = ["mockingbird"]
basic-cmds = []
bookmark = []
mockingbird = ["dep:songbird"]
dj-room = ["mockingbird"]
demix = ["mockingbird"]
list-feature-cmd = []

[package.metadata.nix]
app = true
build = true
library = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]
