[package]
name = "coggiebot"
version = "1.4.18"
edition = "2021"

[dependencies]
serenity = { version = "0.11", default-features=true, features = ["client", "gateway", "rustls_backend", "model", "builder", "framework", "standard_framework", "voice", "cache" ] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = "0.11"
mockingbird = { path = "../mockingbird", optional=true }
rand = { version="^0.8", optional=true }
serde_json = "1"
serde = "1"
base64 = { version = "0.21", optional = true }

[features]
default = []
list-feature-cmd = []
basic-cmds = []
bookmark = []
llm = ["dep:rand", "dep:base64"]
################
# mockingbird features
mockingbird-core = ["dep:mockingbird"]

mockingbird-arl-cmd = ["mockingbird?/arl-cmd"]
mockingbird-ctrl = ["mockingbird?/controller"]
mockingbird-debug = ["mockingbird?/debug"]

################
# mockingbird is compatiable with youtube & soundcloud
mockingbird-ytdl = ["mockingbird?/ytdl"]

################
# mockingbird compatiable with raw MP3/FLAC http uris
mockingbird-http = ["mockingbird?/http-get"]

################
# mockingbird compatiable with deep-mixer
mockingbird-deemix = ["mockingbird?/deemix"]

################
mockingbird-deemix-check = ["mockingbird?/check"]

################
# NOTE: enabling this is dangerous
# only use for per-guild instances
mockingbird-set-arl-cmd = ["mockingbird?/set-arl-cmd"]

################
# mockingbird compatiable with spotify
# mockingbird-spotify = ["mockingbird-deemix", "dep:serde", "dep:serde_derive", "dep:serde_json"]

#########
# enable meme commands
memes = []

[package.metadata.nix]
app = true
build = true
library = true
systems = [
    "aarch64-linux",
    "aarch64-darwin",
    "i686-linux",
    "x86_64-darwin",
    "x86_64-linux",
]

