[package]
name = "cutils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
cc = "1"

[dependencies]
tokio = { version = "*", optional = true, features = ["fs"] }

[features]
default = []

tokio = [ "dep:tokio" ]
stdio = []

