[package]
name = "mockingbird"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = { version = "0.3", features = ["builtin-queue"] }
serenity = { version = "0.11", default-features=false, features = ["standard_framework", "model", "voice", "client", "gateway", "cache"] }
tracing = { version = "0.1"}
tokio = {version = "1.0", default-features=false, features = ["time", "rt"]}

####
serde = { version = "1.0", optional=true }
serde_json = { version = "1.0", optional=true }
reqwest = { version = "0.11", optional = true }

[build-dependencies]
cc = "1"

[features]
default = ["ytdl", "deemix"]
ytdl = ["songbird/yt-dlp"]
deemix = ["dep:serde", "dep:serde_json"]
wget-mp3 = ["dep:reqwest"]
