[package]
name = "mockingbird"
version = "0.0.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
songbird = { version = "0.3", features = ["builtin-queue"] }
serenity = { version = "0.11", default-features=false, features = ["standard_framework", "model", "voice", "client", "gateway", "cache", "collector"] }            
tracing = { version = "0.1"}
tokio = {version = "1.0", default-features=false, features = ["time", "rt"]}


####
serde = { version = "1.0", optional=true }
serde_json = { version = "1.0", optional=true }
reqwest = { version = "0.11", optional = true, features = ["cookies"]}
chrono = { version = "^0.4.26", optional = true }
cutils = { path = "../cutils", features = ["tokio"], optional=true }

uuid = { version = "^1.4.1", features = ["v4" ]}
indexmap = { version = "^2.0.0", optional=true }

[features]
default = ["controller", "deemix", "ytdl", "roundrobin-queue"]
controller = []
debug = []

roundrobin-queue = ["dep:indexmap"]


check = ["dep:chrono", "dep:reqwest", "dep:serde", "dep:serde_json"]
ytdl = ["songbird/yt-dlp"]
deemix = ["dep:serde", "dep:serde_json", "cutils"]
wget-mp3 = ["dep:reqwest"]
arl-cmd = ["check"]
